--- a/.env
+++ b/.env
@@ -12,6 +12,8 @@ NOTE_ICON_BACK_LINKS=false
 STYLE_SETTINGS_CSS=body.css-settings-manager { --font: 'BIGMACCA', 'Palatino Black', 'Book Antiqua', 'Georgia', 'Suez One', serif; --header-weight: 100; --background-image-blur: 0px; --background-image-opacity: 20%; --background-image-sidebar-opacity: 20%; --background-image-height: 0%; --background-image-width: 0%; --background-image-url: url(https://i.imgur.com/gzDN61i.png); --popover-width: 450px; --radius-s: 0px; } body.theme-light.css-settings-manager { } body.theme-dark.css-settings-manager { }
 STYLE_SETTINGS_BODY_CLASSES=theme-dark mod-windows is-frameless is-hidden-frameless obsidian-app show-inline-title show-view-header css-settings-manager sizing-readable sidebar-float-bottom background-image justified check-color check-bg tables-center embed-clean default-statblock drwn is-focused
 USE_FULL_RESOLUTION_IMAGES=false
+THEME=https://raw.githubusercontent.com/SlRvb/Obsidian--ITS-Theme/HEAD/theme.css
+BASE_THEME=dark
 dgHomeLink=true
 dgPassFrontmatter=false
 dgShowBacklinks=false
